# coding-editor

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml
app/: package.json  vite.config.ts
app/src/: App.css  App.tsx
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/resources/expo-template/: app.json  package.json
app/src-tauri/resources/expo-template/app/: _layout.tsx
app/src-tauri/src/: agent.rs  aws.rs  config.rs  lib.rs  main.rs  project.rs
app/src/components/activitybar/: index.tsx
app/src/components/agentpanel/: index.tsx
app/src/components/agentpanel/group-log/: index.tsx
app/src/components/configuration/: index.tsx
app/src/components/configuration/aws/: index.tsx
app/src/components/configuration/collaboration/: index.tsx
app/src/components/dashboard/: index.tsx
app/src/components/editor/: index.tsx
app/src/components/filetree/: index.tsx
app/src/components/prompt/: index.tsx
app/src/components/settings/: index.tsx
app/src/components/sidebar/: index.tsx
app/src/components/statusbar/: index.tsx
app/src/components/tabbar/: index.tsx
app/src/components/titlebar/: index.tsx
app/src/lib/: persistence.ts
app/src/models/: index.ts
app/src/pages/: config.tsx  dashboard.tsx  editor.tsx  prompt.tsx
app/src/providers/: config.tsx  guest.tsx
app/src/service/: agent-service.ts  index.ts  snack-service.ts
app/src/store/: index.ts  settings.ts
app/src/store/collab/: index.ts
app/src/store/collab/helpers/: doc.ts  (+9 more)
backend/: .gitignore  pyproject.toml
backend/src/agent/editor/: agent.py  context.py  system_prompt.py
backend/src/agent/scaffold/: agent.py  context.py  system_prompt.py
backend/src/backend/: main.py  model.py
socket/: .gitignore  package.json  tsconfig.json
socket/src/: index.ts
socket/src/control/: helpers.ts  model.ts
socket/src/types/: y-leveldb.d.ts  y-websocket.d.ts
(+20 files in other folders)
