[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Eikhiena Blessed Josiah",email = "creativejosiah@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.129.0,<0.130.0)",
    "pydantic-ai (>=1.59.0,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[project.scripts]
serve = "backend:main.run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
