[package]
name = "coding-editor"
version = "0.1.0"
description = "A coding editor"
authors = ["bjoxiah"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "coding_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"

aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.124.0", features = ["rt-tokio"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-store = "2"
aes-gcm     = "0.10"
base64      = "0.22"
sha2        = "0.10"
machine-uid = "0.5"
aws-credential-types = "1.2.13"
aws-smithy-types = "1.4.5"
chrono = "0.4.43"
reqwest = { version = "0.13.2", features = ["json"] }
futures-util = "0.3.32"
bytes = "1.11.1"

